omweather (0.26) unstable; urgency=low

  * Fixed bug #5362 "Home's layout for the widget doesn't match the visible layout"
  * Fixed bug #8960 "GPS station does not update"
  * Fixed problem with adding or modifying a new station in configuration window

 -- Vlad Vasiliev <vlad@gas.by>  Sun, 28 Feb 2010 16:11:10 +0200

omweather (0.25.8) unstable; urgency=low

  * Bug in promotion phase in builder for package 0.25.7 (armel)
  http://maemo.org/packages/package_instance/view/fremantle_extras-devel_free_armel/omweather/0.25.7/

 -- Vlad Vasiliev <vlad@gas.by>  Sat, 27 Feb 2010 16:11:10 +0200

omweather (0.25.7) unstable; urgency=low

  * Fixed bug #9293 "update problem"

 -- Vlad Vasiliev <vlad@gas.by>  Fri, 26 Feb 2010 16:11:10 +0200

omweather (0.25.6) unstable; urgency=low

  * Fixed bug #5976 "Clearing a station doesn't result in the same state as the initial state"
  * Fixed bug #6125 "please don't use system modal dialogs"
  * Improved algorithm for updating data
  * Fixed small memory leak 

 -- Vlad Vasiliev <vlad@gas.by>  Fri, 26 Feb 2010 13:11:10 +0200

omweather (0.25.5) unstable; urgency=low

  * Fixed bug #9167 "Automatic update doesn't always work"

 -- Vlad Vasiliev <vlad@gas.by>  Mon, 22 Feb 2010 03:11:10 +0200

omweather (0.25.4) unstable; urgency=low

  * Updated German, Finish, Spanish, French, Poland translations

 -- Vlad Vasiliev <vlad@gas.by>  Sun, 21 Feb 2010 23:11:10 +0200

omweather (0.25.3) unstable; urgency=low

  * Fixed problem with widgets layout in Settings window 
  * Added field Xsbc-Bugtracker in control file
  * Added day length
  * Fixed some problems in GPS code

 -- Vlad Vasiliev <vlad@gas.by>  Sun, 14 Feb 2010 22:11:10 +0200

omweather (0.25.2) unstable; urgency=low

  * Fixed problem with updating if GSM and WLAN checkboxes is disabled
  * Fixed bug #6488 "Cannot use desktop when omweather details open"
  * Fixed bug #8424 "Updating via 3G/GPRS unsuccessful"
  * Added Hildon Pannable Area for stations