@@ -1297,13 +1297,15 @@ create_forecast_weather_simple_widget(GHashTable *day){
                     *main_data_label = NULL,
                     *main_widget = NULL,
                     *temperature_vbox = NULL;
-    gchar           buffer[1024];
+    gchar           buffer[1024],
+                    *units;
     time_t          day_begin_time,
                     night_begin_time,
                     current_time;
     gint            year;
     struct tm       *tm;
     const gchar     *wind_units_str[] = { "m/s", "km/h", "mi/h" };
+    float           tmp_pressure = 0.0f;
 #ifdef DEBUGFUNCTIONCALL
     START_FUNCTION;
 #endif
@@ -1343,6 +1345,7 @@ create_forecast_weather_simple_widget(GHashTable *day){
     if((current_time > day_begin_time) && (current_time < night_begin_time)){
         if (g_hash_table_lookup(day, "day_title"), FALSE)
             strcat(buffer, (gchar*)hash_table_find(g_hash_table_lookup(day, "day_title"), FALSE));
+
         strcat(buffer, _("\nHumidity: "));
         if(g_hash_table_lookup(day, "day_humidity") &&
            strcmp(g_hash_table_lookup(day, "day_humidity"), "N/A"))
@@ -1351,6 +1354,24 @@ create_forecast_weather_simple_widget(GHashTable *day){
         else
             sprintf(buffer + strlen(buffer), "%s\n",
                 (gchar*)hash_table_find("N/A", FALSE));
+
+        if(g_hash_table_lookup(day, "day_pressure") && strcmp(g_hash_table_lookup(day, "day_pressure"), "N/A")){
+            strcat(buffer, _("Pressure: "));
+            tmp_pressure = atof((char*)g_hash_table_lookup(day, "day_pressure"));
+            switch(app->config->pressure_units){
+                default:
+                case MB:   units = _("mb"); 
+                           sprintf(buffer + strlen(buffer), "%.0f %s\n", tmp_pressure, units);
+                           break;
+                case INCH: units = _("inHg"); tmp_pressure = mb2inch(tmp_pressure); 
+                           sprintf(buffer + strlen(buffer), "%.2f %s\n", tmp_pressure, units);
+                           break;
+                case MM: units = _("mmHg"); tmp_pressure = mb2mm(tmp_pressure); 
+                         sprintf(buffer + strlen(buffer), "%.0f %s\n", tmp_pressure, units);
+                         break;
+            }
+        }
+
         strcat(buffer, _("Wind: "));
         if ((g_hash_table_lookup(day, "day_wind_title"), TRUE) && 
             (g_hash_table_lookup(day, "day_wind_speed"))){
@@ -1388,6 +1409,24 @@ create_forecast_weather_simple_widget(GHashTable *day){
                     (char*)g_hash_table_lookup(day, "night_humidity"));
         else
             sprintf(buffer + strlen(buffer), "%s\n", (gchar*)hash_table_find("N/A", FALSE));
+
+        if(g_hash_table_lookup(day, "night_pressure") && strcmp(g_hash_table_lookup(day, "night_pressure"), "N/A")){
+            strcat(buffer, _("Pressure: "));
+            tmp_pressure = atof((char*)g_hash_table_lookup(day, "night_pressure"));
+                switch(app->config->pressure_units){
+                    default:
+                    case MB:   units = _("mb"); 
+                               sprintf(buffer + strlen(buffer), "%.0f %s\n", tmp_pressure, units);
+                               break;
+                    case INCH: units = _("inHg"); tmp_pressure = mb2inch(tmp_pressure); 
+                               sprintf(buffer + strlen(buffer), "%.2f %s\n", tmp_pressure, units);
+                               break;
+                    case MM: units = _("mmHg"); tmp_pressure = mb2mm(tmp_pressure); 
+                             sprintf(buffer + strlen(buffer), "%.0f %s\n", tmp_pressure, units);
+                             break;
+                }
+        }
+
         strcat(buffer, _("Wind: "));
         if (g_hash_table_lookup(day, "night_wind_title") &&
                 g_hash_table_lookup(day, "night_wind_speed")){
